# antilorak

./: README.md  antilorak.cabal
src/: Main.hs
