name:                antilorak
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/k-bx/antilorak#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov <k-bx@k-bx.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable antilorak
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , enclosed-exceptions
                     , http-client
                     , http-client-tls
                     , http-types
                     , lens
                     , lens-aeson
                     , optparse-simple
                     , safe
                     , string-class
                     , text
                     , wreq
